feat: Edit update password api, add bruno
