# app/Http/Controllers/User/UserProfileController.php
@@ -4,10 +4,13 @@ namespace App\Http\Controllers\User;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\CreateOrUpdateUserRequest;
+use App\Http\Requests\UserProfile\UpdateUserPasswordRequest;
 use App\Http\Requests\UserProfile\UpdateUserProfileRequest;
 use App\Http\Resources\UserResource;
 use App\Models\User;
 use Illuminate\Support\Facades\Gate;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Validation\ValidationException;
 
 class UserProfileController extends Controller
 {
@@ -35,7 +38,7 @@ class UserProfileController extends Controller
 
         $user = auth()->user();
 
-        $user->title = $data['title'];
+        $user->title = $data['title'] ?? null;
         $user->first_name = $data['first_name'];
         $user->last_name = $data['last_name'];
         $user->save();
@@ -48,13 +51,18 @@ class UserProfileController extends Controller
      *
      * @group Users
      */
-    public function updatePassword(CreateOrUpdateUserRequest $request)
+    public function updatePassword(UpdateUserPasswordRequest $request)
     {
         $data = $request->validated();
-
         $user = auth()->user();
 
-        $user->password = bcrypt($data['password']);
+        if (! isset($data['current_password']) || ! Hash::check($data['current_password'], $user->password)) {
+            throw ValidationException::withMessages([
+                'current_password' => __('validation.current_password'),
+            ]);
+        }
+
+        $user->password = Hash::make($data['password']);
         $user->save();
 
         return new UserResource($user);
