# lang/th/validation.php
@@ -150,6 +150,7 @@ return [
     'uppercase' => ':attribute ต้องเป็นตัวพิมพ์ใหญ่',
     'url' => 'ข้อมูล :attribute ต้องเป็น URL ที่ถูกรูปแบบ',
     'uuid' => 'ข้อมูล :attribute ต้องเป็นค่า UUID ที่ถูกรูปแบบ',
+    'custom' => [],
     'attributes' => [
         'address' => 'ที่อยู่',
         'affiliate_url' => 'URL พันธมิตร',
@@ -186,7 +187,7 @@ return [
         'excerpt' => 'ข้อความที่ตัดตอนมา',
         'filter' => 'กรอง',
         'finished_at' => 'เสร็จเมื่อ',
-        'first_name' => 'ชื่อตัว',
+        'first_name' => 'ชื่อ',
         'gender' => 'เพศ',
         'grand_prize' => 'รางวัลใหญ่',
         'group' => 'กลุ่ม',
@@ -203,7 +204,7 @@ return [
         'is_winner' => 'เป็นผู้ชนะ',
         'items' => 'รายการ',
         'key' => 'กุญแจ',
-        'last_name' => 'ชื่อสกุล',
+        'last_name' => 'นามสกุล',
         'lesson' => 'บทเรียน',
         'line_address_1' => 'ที่อยู่บรรทัดที่ 1',
         'line_address_2' => 'ที่อยู่บรรทัดที่ 2',
@@ -265,6 +266,7 @@ return [
         'text' => 'ข้อความ',
         'time' => 'เวลา',
         'title' => 'หัวเรื่อง',
+        'user_title' => 'คำนำหน้า',
         'type' => 'ชนิด',
         'updated_at' => 'ปรับปรุงเมื่อ',
         'user' => 'ผู้ใช้',
